--- a/Treino de HTML-css/db012/style.css
+++ b/Treino de HTML-css/db012/style.css
@@ -18,6 +18,7 @@
 body {
     margin: 0px;
     padding: 0px;
+    min-height: 100vh;
 }
 
 
@@ -30,7 +31,7 @@ header {
 }
 
 header > h1 {
-    font-family: Srira;
+    font-variant: small-caps;
 }
 
 header > p {
@@ -50,5 +51,23 @@ main {
     font-family: Srira;
     font-size: 25px;
     list-style: none;
+    margin: 0px;
+}
+
+section{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+section.imagem {
+    background-color: rgb(90, 90, 90);
+    color: white;
+}
+
+section.imagem> p {
+    width: 400px;
+    background-color: black;
 }
 
