--- a/Treino de HTML-css/db012/style.css
+++ b/Treino de HTML-css/db012/style.css
@@ -63,6 +63,10 @@ section{
     font-size: 6vh;
 }
 
+section > p {
+    padding-bottom: 20px;
+}
+
 section.imagem {
     background-color: rgb(90, 90, 90);
     color: white;
