--- a/Treino de HTML-css/db012/style.css
+++ b/Treino de HTML-css/db012/style.css
@@ -53,6 +53,7 @@ main {
     font-size: 25px;
     list-style: none;
     margin: 0px;
+    font-size: 5vh;
 }
 
 section{
@@ -60,7 +61,7 @@ section{
     padding-bottom: 10px;
     line-height: 2em;
     padding-left: 30px;
-    font-size: 6vh;
+    font-size: 4vh;
 }
 
 section > p {
@@ -70,13 +71,21 @@ section > p {
 section.imagem {
     background-color: rgb(90, 90, 90);
     color: white;
+    background-size: cover;
+    box-shadow: inset 6px 6px 10px rgba(0, 0, 0, 0.418);
+    background-attachment: fixed;
 }
 
 section.imagem> p {
     width: 400px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.253);
 }
 
 section#imagemflor {
     background-image: url(imagens/background001.jpg);
+    background-position: right center;
 } 
+
+section#imagemlivro {
+    background-image: url(imagens/background002.jpg);
+}
